@@ -17,28 +17,28 @@
 
 set -ex
 # Build the test
-bin/M2-Planet --architecture x86 -f functions/file.c \
+bin/M2-Planet --architecture x86 -f test/common_x86/functions/file.c \
 	-f test/common_x86/functions/putchar.c \
-	-f test/test16/file_write.c \
-	-o test/test16/file_write.M1 || exit 1
+	-f test/test15/file_read.c \
+	-o test/test15/file_read.M1 || exit 1
 
 # Macro assemble with libc written in M1-Macro
 M1 -f test/common_x86/x86_defs.M1 \
 	-f test/common_x86/libc-core.M1 \
-	-f test/test16/file_write.M1 \
+	-f test/test15/file_read.M1 \
 	--LittleEndian \
 	--architecture x86 \
-	-o test/test16/file_write.hex2 || exit 2
+	-o test/test15/file_read.hex2 || exit 2
 
 # Resolve all linkages
-hex2 -f test/common_x86/ELF-i386.hex2 -f test/test16/file_write.hex2 --LittleEndian --architecture x86 --BaseAddress 0x8048000 -o test/results/test16-binary --exec_enable || exit 3
+hex2 -f test/common_x86/ELF-i386.hex2 -f test/test15/file_read.hex2 --LittleEndian --architecture x86 --BaseAddress 0x8048000 -o test/results/test15-x86-binary --exec_enable || exit 3
 
 # Ensure binary works if host machine supports test
 if [ "$(get_machine ${GET_MACHINE_FLAGS})" = "x86" ]
 then
 	# Verify that the resulting file works
-	./test/results/test16-binary test/test16/proof || exit 4
-	out=$(sha256sum -c test/test16/proof.answer)
-	[ "$out" = "test/test16/proof: OK" ] || exit 5
+	./test/results/test15-x86-binary test/test15/file_read.c >| test/test15/proof || exit 4
+	out=$(sha256sum -c test/test15/proof.answer)
+	[ "$out" = "test/test15/proof: OK" ] || exit 5
 fi
 exit 0
