@@ -18,7 +18,7 @@
 set -x
 # Build the test
 ./bin/M2-Planet --architecture x86 -f test/common_x86/functions/exit.c \
-	-f functions/file.c \
+	-f test/common_x86/functions/file.c \
 	-f functions/file_print.c \
 	-f test/common_x86/functions/malloc.c \
 	-f functions/calloc.c \
