@@ -26,7 +26,7 @@ Added support for octal and binary numbers
 Added support for \0
 Added support for GET_MACHINE_FLAGS in tests
 Added --architecture flag
-Added 14/24 working tests for knight-posix
+Added 16/24 working tests for knight-posix
 Added working HEAP/malloc to knight-posix
 
 ** Changed
@@ -41,6 +41,7 @@ Changed default architecture to knight-native
 Moved x86 specific exit.c and putchar.c to test/common_x86/functions
 Relocated x86 specific libc.M1 to test/common_x86
 Formalized Knight-posix execve standard
+Relocated x86 specific file.c to test/common_x86/functions
 
 ** Fixed
 Fixed typo in file headers
